--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "next": "^10.0.0",
     "postcss-import": "^14.0.0",
     "postcss-loader": "^5.2.0",
+    "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.32.8",
+    "stripe": "^8.139.0",
     "tailwindcss": "^2.0.4"
   },
   "devDependencies": {
